%% Control Hierarchy Class Diagram
classDiagram
    class UserControl {
        +Controls : ControlCollection
        +Size : Size
        +Dock : DockStyle
    }

    class BaseEntityControl~T, TRepository~ {
        <<abstract>>
        #dataGridView1 : DataGridView
        #txtSearch : TextBox
        #btnAdd : Button
        #btnDelete : Button
        #btnUpdate : Button
        #btnLogout : Button
        #buttonPanel : FlowLayoutPanel
        #repository : TRepository
        +InitializeComponent() : void
        #CreateTitlePanel() : Panel
        #CreateSearchPanel() : Panel
        #CreateButtonPanel() : FlowLayoutPanel
        #DataGridView_DataBindingComplete(sender : object, e : DataGridViewBindingCompleteEventArgs) : void
        #GetTitle() : string
        #GetAddButtonText() : string
        #LoadData(search : string) : void
        #ConfigureDataGridViewColumns() : void
        #CreateEntityForm(entityId : int?) : Form
        #GetSelectedEntityId() : int
        #GetEntityName() : string
        #txtSearch_TextChanged(sender : object, e : EventArgs) : void
        #btnAdd_Click(sender : object, e : EventArgs) : void
        #btnUpdate_Click(sender : object, e : EventArgs) : void
        #btnDelete_Click(sender : object, e : EventArgs) : void
        #btnLogout_Click(sender : object, e : EventArgs) : void
    }

    class IRepository~T~ {
        <<interface>>
        +GetAll() : List~T~
        +GetById(id : int) : T
        +Insert(entity : T) : bool
    }

    class UIHelper {
        <<static>>
        +StyleDataGridView(dgv : DataGridView) : void
        +WrapDataGridViewInRoundedPanel(dgv : DataGridView) : Panel
        +StyleModernButton(btn : Button) : void
        +StyleModernTextBox(txt : TextBox) : void
        +StyleModernLabel(lbl : Label) : void
        +StyleHeading(lbl : Label, level : int) : void
    }

    UserControl <|-- BaseEntityControl~T, TRepository~ : inherits
    BaseEntityControl~T, TRepository~ ..> IRepository~T~ : uses
    BaseEntityControl~T, TRepository~ ..> UIHelper : uses

    note for BaseEntityControl~T, TRepository~ "Template Method Pattern\nDefines UI structure\nDerived classes implement\nabstract methods for\nentity-specific operations"
    note for BaseEntityControl~T, TRepository~ "Generic constraints:\nT : class\nTRepository : IRepository~T~, new()"

